fixed form elements

--- a/register.html
+++ b/register.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div>
-        <div id="register-username"></div>
+        <input type="text" id="register-username"></input>
         <button type="button" id="register-submit">Register</button>
-        <div id="register-error"></div>
+        <p id="register-error"></p>
         <script type="module">
             import { MessengerApplication } from "/js/messenger.js";
     
