--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <input type="file" id="login-key-file">
     <input type="text" id="login-username">
-    <div id="login-error"></div>
+    <p id="login-error"></p>
     <button type="button" id="login-submit">Login</button>
     <script type="module">
         import MessengerApplication from "/js/messenger.js";
