--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local Messenger</title>
+    <!-- redirect to home -->
+    <meta http-equiv="refresh" content="0; url=/home.html">
 </head>
-<body>
-    <h1>Local Messenger</h1>
-    <a href="/login.html">login</a>
-    <a href="/register.html">register</a>
-</body>
 </html>
