added about page

--- a/home.html
+++ b/home.html
@@ -15,8 +15,9 @@
         <link rel="stylesheet" href="/css/header.css">
         <img src="logo.svg" class="header-logo">
         <div class="header-links">
-            <a href="/login.html" class="header-link">LOGIN</a>
-            <a href="/register.html" class="header-link">REGISTER</a>
+            <a href="/login.html">LOGIN</a>
+            <a href="/register.html">REGISTER</a>
+            <a href="/about.html">ABOUT</a>
         </div>
     </header>
     <div class="">
