made header neumorphic

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <img src="home.svg" class="background"></svg>
-    <header>
+    <header class="neumorphic">
         <link rel="stylesheet" href="/css/header.css">
         <img src="logo.svg" class="header-logo">
         <div class="header-links">
@@ -22,7 +22,7 @@
     </header>
     <div class="">
         <div class="display-box">
-            <div class="description">
+            <div class="neumorphic description">
                 <img src="logo.svg" class="logo">
                 <p>Welcome to Emissary, the local messenger that lets you securely send messages through browser storage.</p>
             </div>
