fixed several problems

--- a/home.html
+++ b/home.html
@@ -13,25 +13,26 @@
     <img src="home.svg" class="background"></svg>
     <header class="neumorphic">
         <link rel="stylesheet" href="/css/header.css">
-        <img src="logo.svg" class="header-logo">
+        <a href="/home.html">
+            <img src="logo.svg" alt="Emissary logo" class="header-logo">
+        </a>
         <div class="header-links">
             <a href="/login.html">LOGIN</a>
             <a href="/register.html">REGISTER</a>
             <a href="/about.html">ABOUT</a>
         </div>
     </header>
-    <div class="">
-        <div class="display-box">
+    <div>
+        <section class="feature-section">
             <div class="neumorphic description">
-                <img src="logo.svg" class="logo">
+                <img src="logo.svg" alt="Emissary logo" class="logo">
                 <p>Welcome to Emissary, the local messenger that lets you securely send messages through browser storage.</p>
             </div>
-        </div>
+        </section>
         <div class="login-register">
             <a href="/login.html" class="button">LOGIN</a>
             <a href="/register.html" class="button">REGISTER</a>
         </div>
-    
     </div>
 </body>
 </html>
