added wave sections to home page

--- a/home.html
+++ b/home.html
@@ -26,13 +26,31 @@
         <section class="feature-section">
             <div class="neumorphic description">
                 <img src="logo.svg" alt="Emissary logo" class="logo">
-                <p>Welcome to Emissary, the local messenger that lets you securely send messages through browser storage.</p>
+                <p>Welcome to Emissary, the <a href="">secure</a>, <a href="">static</a> messenger.</p>
             </div>
         </section>
         <div class="login-register">
             <a href="/login.html" class="button">LOGIN</a>
             <a href="/register.html" class="button">REGISTER</a>
         </div>
+    </div>
+
+    <div class="dark section">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 122.22">
+            <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
+        </svg>
+        <section>
+            <div class="info-block">
+                <h1>Secure (lock?)</h1>
+                <p>bees</p>
+            </div>
+            <h1>Static (animated graphic of static on a tv screen) (maybe only activate on hover)</h1>
+            <h1>Local (animated graphic of the person switching not the computer)</h1>
+            <p>Only one computer required.</p>
+        </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 122.22">
+            <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
+        </svg>
     </div>
 </body>
 </html>
