--- a/register.html
+++ b/register.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <script src="/js/messenger.js" type="module"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/popup.css">
 </head>
 <body>
     <div>
@@ -20,16 +22,25 @@
             let error = document.getElementById("register-error");
             let submit = document.getElementById("register-submit");
             let downloadLink = document.getElementById("register-key-download");
-            let downloadPopup = document.getElementById("key-download-popup");
+            let downloadPopup = document.getElementById("register-download-popup");
             
             function registerHandler() {
                 let username = usernameInput.value;
 
                 if (app.usernameAvailable(username)) { // check if username is available
-                    let key = app.register(username); // register user
-                    downloadLink.setAttribute("href", "data:text/plain;base64," + btoa(key)); // base64 encode the key and set the uri on the download link
-                    downloadLink.setAttribute("download", username + ".key");
-                    downloadPopup.style["display"] = "block";
+                    app.register(username).then(
+                        function (key) {
+                            let blob = new Blob([key]);
+                            let reader = new FileReader();
+                            reader.addEventListener("loadend", () => { // when reader is done reading
+                                downloadLink.setAttribute("href", reader.result); // set the uri on the download link
+                                downloadLink.setAttribute("download", username + ".key"); // set the downlaod filename
+                                downloadPopup.style["display"] = "flex"; // show the key download popup
+                            });
+
+                            reader.readAsDataURL(blob); // read the key as a data url
+                        }
+                    ) // register user
                 }
                 else {
                     error.innerHTML = "That username is not available.";
@@ -39,9 +50,10 @@
             submit.addEventListener("click", registerHandler);
         </script>
     </div>
-    <div id="key-download-popup" style="display: none">
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="register-key-download">Key</a>
-        </script>
+    <div class="popup-container" id="register-download-popup" style="display: none">
+        <div class="popup">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="register-key-download">Key</a>
+        </div>
     </div>
 </body>
 </html>
