made registration work

--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
             </div>
         </section>
         <div class="login-register">
-            <a href="/login.html" class="button">LOGIN</a>
-            <a href="/register.html" class="button">REGISTER</a>
+            <a href="/login.html" class="big-button">LOGIN</a>
+            <a href="/register.html" class="big-button">REGISTER</a>
         </div>
     </div>
 
