created img folder

--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
-    <img src="home.svg" class="background"></svg>
+    <img src="/img/home.svg" class="background"></svg>
     <header class="neumorphic">
         <link rel="stylesheet" href="/css/header.css">
         <a href="/home.html">
-            <img src="logo.svg" alt="Emissary logo" class="header-logo">
+            <img src="/img/logo.svg" alt="Emissary logo" class="header-logo">
         </a>
         <div class="header-links">
             <a href="/login.html">LOGIN</a>
@@ -25,8 +25,8 @@
     <div>
         <section class="feature-section">
             <div class="neumorphic description">
-                <img src="logo.svg" alt="Emissary logo" class="logo">
-                <p>Welcome to Emissary, the <a href="">secure</a>, <a href="">static</a> messenger.</p>
+                <img src="/img/logo.svg" alt="Emissary logo" class="logo">
+                <p>Welcome to Emissary, the <a href="#secure">secure</a>, <a href="#static">static</a> messenger.</p>
             </div>
         </section>
         <div class="login-register">
@@ -41,8 +41,8 @@
         </svg>
         <section>
             <div class="info-block">
-                <h1>Secure (lock?)</h1>
-                <p>bees</p>
+                <h1>Secure</h1>
+                <p>Emissary uses <a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">AES</a>-<a href="https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_block_chaining_(CBC)">CBC</a> to securely store your data and <a href="https://en.wikipedia.org/wiki/RSA_(cryptosystem)">RSA</a> to send your messages securely.</p>
             </div>
             <h1>Static (animated graphic of static on a tv screen) (maybe only activate on hover)</h1>
             <h1>Local (animated graphic of the person switching not the computer)</h1>
