--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -41,7 +41,7 @@
             <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
         </svg>
         <section>
-            <div class="info-block" id="#secure">
+            <div class="info-block" id="secure">
                 <h1>Secure</h1>
                 <p>Emissary uses <a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">AES</a>-<a href="https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_block_chaining_(CBC)">CBC</a> to securely store your data and <a href="https://en.wikipedia.org/wiki/RSA_(cryptosystem)">RSA</a> to send your messages securely.</p>
             </div>
@@ -57,7 +57,7 @@
             <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
         </svg>
         <section>
-            <div class="info-block">
+            <div class="info-block" id="local">
                 <h1>Local</h1>
                 <p>Only one computer required.</p>
             </div>
