updated centered button links

--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -31,8 +31,8 @@
             </div>
         </section>
         <div class="login-register">
-            <a href="/login.html" class="big-button">LOGIN</a>
-            <a href="/register.html" class="big-button">REGISTER</a>
+            <a href="/app/login.html" class="big-button">LOGIN</a>
+            <a href="/app/register.html" class="big-button">REGISTER</a>
         </div>
     </div>
 
