--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -45,7 +45,7 @@
                 <h1>NSA approved.</h1>
                 <p>Emissary uses 256-bit <a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">AES</a>-<a href="https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_block_chaining_(CBC)">CBC</a> to securely store your data and <a href="https://en.wikipedia.org/wiki/RSA_(cryptosystem)">RSA</a> to send your messages securely (that's the same level of encryption the <a href="https://www.keylength.com/en/compare/">NSA recommends</a> for top secret information).</p>
             </div>
-            <img src="/img/secure.gif" alt="">
+            <img src="/img/secure.svg" alt="">
         </section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 122.22">
             <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
