--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -6,33 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emissary</title>
     <!-- stylesheets -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <script src="/js/bar.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <img src="/img/home.svg" class="background"></svg>
+    <img src="img/home.svg" class="background"></svg>
     <header class="neumorphic">
-        <link rel="stylesheet" href="/css/header.css">
-        <a href="/home.html">
-            <img src="/img/logo.svg" alt="Emissary logo" class="header-logo">
+        <link rel="stylesheet" href="css/header.css">
+        <a href="home.html">
+            <img src="img/logo.svg" alt="Emissary logo" class="header-logo">
         </a>
         <div class="header-links">
-            <a href="/app/login.html">LOGIN</a>
-            <a href="/app/register.html">REGISTER</a>
-            <a href="/about.html">ABOUT</a>
+            <a href="app/login.html">LOGIN</a>
+            <a href="app/register.html">REGISTER</a>
+            <a href="about.html">ABOUT</a>
         </div>
     </header>
     <div>
         <section class="feature-section">
             <div class="neumorphic description">
-                <img src="/img/logo.svg" alt="Emissary logo" class="logo">
+                <img src="img/logo.svg" alt="Emissary logo" class="logo">
                 <p>Welcome to Emissary, the <a href="#secure">secure</a>, <a href="#local">local</a> and <a href="#accessible">accessible</a> messenger.</p>
             </div>
         </section>
         <div class="login-register">
-            <a href="/app/login.html" class="big-button">LOGIN</a>
-            <a href="/app/register.html" class="big-button">REGISTER</a>
+            <a href="app/login.html" class="big-button">LOGIN</a>
+            <a href="app/register.html" class="big-button">REGISTER</a>
         </div>
     </div>
 
@@ -45,7 +44,7 @@
                 <h1>NSA approved.</h1>
                 <p>Emissary uses 256-bit <a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">AES</a>-<a href="https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_block_chaining_(CBC)">CBC</a> to securely store your data and <a href="https://en.wikipedia.org/wiki/RSA_(cryptosystem)">RSA</a> to send your messages securely (that's the same level of encryption the <a href="https://www.keylength.com/en/compare/">NSA recommends</a> for top secret information).</p>
             </div>
-            <img src="/img/secure.svg" alt="">
+            <img src="img/secure.svg" alt="">
         </section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 122.22">
             <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
