updated accessible graphic and added margin to images

--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -70,11 +70,8 @@
                 <h1>Just one computer required.</h1>
                 <p>Use Emissary on a public computer, a home computer or any other shared device. Emissary is perfect for any shared facility such as a library, school, university or even household study.</p>
             </div>
-            <img src="img/local.gif" alt="">
+            <img src="img/accessible.svg" alt="">
         </section>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 122.22">
-            <path d="M.5,1016.61s420.8-132,658.41,0c240.09,133.39,531,0,531,0s264-133.5,730.55,0v62.89H.5Z" fill="currentColor" transform="translate(-0.5 -957.28)"/>
-        </svg>
     </div>
 </body>
 </html>
