--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emissary</title>
+    <title>Emissary - Home</title>
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
@@ -73,5 +73,8 @@
             <img src="img/accessible.svg" alt="">
         </section>
     </div>
+    <footer>
+        <p>Emissary© 2021</p>
+    </footer>
 </body>
 </html>
