--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -41,8 +41,8 @@
         </svg>
         <section>
             <div class="info-block" id="secure">
-                <h1>NSA approved.</h1>
-                <p>Emissary uses 256-bit <a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">AES</a>-<a href="https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_block_chaining_(CBC)">CBC</a> to securely store your data and <a href="https://en.wikipedia.org/wiki/RSA_(cryptosystem)">RSA</a> to send your messages securely (that's the same level of encryption the <a href="https://www.keylength.com/en/compare/">NSA recommends</a> for top secret information).</p>
+                <h1>NIST approved.</h1>
+                <p>Emissary uses 128-bit <a href="https://en.wikipedia.org/wiki/Advanced_Encryption_Standard">AES</a>-<a href="https://en.wikipedia.org/wiki/Block_cipher_mode_of_operation#Cipher_block_chaining_(CBC)">CBC</a> to securely store your data and <a href="https://en.wikipedia.org/wiki/RSA_(cryptosystem)">RSA</a> to send your messages securely (that's the same level of encryption the <a href="https://www.keylength.com/en/compare/">National Institute of Standards and Technology recommends</a> for secure encryption).</p>
             </div>
             <img src="img/secure.svg" alt="">
         </section>
