--- a/src/landing/src/about.html
+++ b/src/landing/src/about.html
@@ -8,6 +8,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
     <header class="neumorphic">
