--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -8,6 +8,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
     <img src="img/home.svg" class="background"></svg>
