--- a/src/landing/src/home.html
+++ b/src/landing/src/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="emissary messenger local accessible secure home">
+    <meta name="description" content="Welcome to Emissary, the secure, local and accessible messenger."/>
     <title>Emissary - Home</title>
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/style.css">
