--- a/src/landing/src/about.html
+++ b/src/landing/src/about.html
@@ -24,14 +24,14 @@
             <a href="about.html">ABOUT</a>
         </div>
     </header>
-    <section class="neumorphic">
-        <div>
+    <section>
+        <div class="neumorphic">
             <h1>About Emissary</h1>
             <p>Emissary is a free, easy-to-use local messenger. It is intended for use on public devices such as library or school computers, but it can also be used at home on a shared computer or similar device. See information on <a href="#getting-started">getting started</a> below</p>
         </div>
         </section>
-    <section id="getting-started" class="neumorphic right">
-        <div>
+    <section id="getting-started" class="right">
+        <div class="neumorphic">
             <h1>Getting started</h1>
             <p>Getting started with Emissary is super simple:</p>
             <ol>
